# Nightingale

./: .env.demo  .gitignore  ATTRIBUTION.txt  README.md  TECHNICAL_BRIEF.md  package-lock.json  package.json
ai-service/: main.py  pyproject.toml  requirements.txt
ai-service/routers/: highlights.py  patient_message.py  redact.py  summarize.py
ai-service/services/: importance.py  llm.py  redaction.py
ai-service/tests/: conftest.py  test_concurrent_edits.py  test_highlight_provenance.py  test_rbac_scope.py  test_revision_history.py  test_self_learning_importance.py
collab-server/: auth.ts  index.ts  package.json  persistence.ts  tsconfig.json
frontend/: next.config.ts  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/components/editor/: CareNoteEditor.tsx  DiffViewer.tsx  HighlightMark.tsx  InlineComment.tsx  MentionSuggest.tsx  SaveConfirmDialog.tsx  VersionHistoryModal.tsx
frontend/components/layout/: TopBar.tsx  (+2 more)
frontend/lib/: utils.ts
scripts/: seed.sh  set-demo-passwords.mjs
supabase/: config.toml
supabase/migrations/: 001_initial_schema.sql  002_rls_policies.sql  003_seed_data.sql  004_fix_seed_function.sql  005_add_profiles_fk.sql  006_fix_timeline_rls.sql  007_fix_select_rls.sql  008_fix_care_plan_score.sql  009_add_patient_message_type.sql  010_add_patient_message_insert_policy.sql  011_restrict_patient_care_note_select.sql  012_allow_patient_select_own_messages.sql  013_fix_function_search_paths.sql  014_data_decay_policy.sql
supabase/snippets/: Untitled query 135.sql
(+24 files in other folders)
